DevOCL/src/objects/CLQ_Staff_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Days_of_Operation__c</fullName>
        <label>Days of Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_End_Time_1__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>End Time 1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_End_Time_2__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>End Time 2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Staff Schedule object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Hours_Schedule__c</fullName>
        <label>Hours Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Name</label>
        <referenceTo>CLQ_Staff_Record__c</referenceTo>
        <relationshipLabel>Staff Schedule</relationshipLabel>
        <relationshipName>Staff_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Start_Time_1__c</fullName>
        <description>User can set 2 ranges for start/end time for each schedule.</description>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <inlineHelpText>Hours of Operation start time for range 1.</inlineHelpText>
        <label>Start Time 1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Start_Time_2__c</fullName>
        <globalPicklist>CLQ_Time_Intervals</globalPicklist>
        <label>Start Time 2</label>
        <type>Picklist</type>
    </fields>
    <label>Staff Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Staff Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>